--- a/src/index.html
+++ b/src/index.html
@@ -242,10 +242,10 @@
         </div>
       </section>
     </div>
-    <section id="call-to-action" class="call-to-action full-width">
+    <section id="call-to-action" class="call-to-action full-width" style="background-image: url('../images/hero/phoenix.svg');">
       <!-- <h2>Secure Your Digital Future</h2> -->
       <h2>Why Choose Us</h2>
-      <div class="container">
+      <div class="container whychooseus">
         <article>
           <h3 class="calltous-title">Cybersance is an efficient blend of automation, AI and human brain.</h3>
           <p class="p-sub">
