fix font weight

--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,10 @@
       </section>
       <section id="whychooseus" class="why-choose-us">
         <div class="container">
-          <h2 class="animate">Why Choose Cybersance?</h2>
+          <h2 class="animate">
+            <!-- Why Choose Cybersance? -->
+            The Cybersance Advantage
+          </h2>
           <div class="features">
             <div class="feature animate">
               <img src="images/security-as-a-service-svgrepo-com.svg" alt="Security Icon" />
@@ -241,6 +244,20 @@
           <span>slack</span>
         </div>
       </section>
+      <section id="industriesweserve" class="industriesweserve">
+        <div class="container">
+          <h2>Industries We Serve</h2>
+          <p>
+            Cybersance successfully delivers its services to both the private and public sector.
+            We count among our clients numerous reputable companies in various industries, such as finance, retail,
+            healthcare, education, as well as government agencies.
+            Our clients especially appreciate how we masterfully tailor our content to industry-specific cybersecurity
+            challenges.
+            Our specialists conduct thorough assessments and provide exclusive technical and geopolitical insights,
+            shaping the successful future of each organization we support.
+          </p>
+        </div>
+      </section>
     </div>
     <section id="call-to-action" class="call-to-action full-width" style="background-image: url('../images/hero/phoenix.svg');">
       <!-- <h2>Secure Your Digital Future</h2> -->
@@ -278,20 +295,6 @@
 
 
       <a data-bs-toggle="modal" data-bs-target="#contactModal" href="#contact-us" class="btn-primary">Get Started</a>
-    </section>
-    <section id="industriesweserve" class="industriesweserve">
-      <div class="container">
-        <h2>Industries We Serve</h2>
-        <p>
-          Cybersance successfully delivers its services to both the private and public sector.
-          We count among our clients numerous reputable companies in various industries, such as finance, retail,
-          healthcare, education, as well as government agencies.
-          Our clients especially appreciate how we masterfully tailor our content to industry-specific cybersecurity
-          challenges.
-          Our specialists conduct thorough assessments and provide exclusive technical and geopolitical insights,
-          shaping the successful future of each organization we support.
-        </p>
-      </div>
     </section>
     <section id="aboutus" class="aboutus full-width">
       <div class="container">
